<resources>
    <string name="app_name">To-Do</string>
    <string name="action_settings">Settings</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All ToDos</string>
    <string name="empty_view_title_text">Look\'s like your To-Do list is empty&#8230;</string>
    <string name="empty_view_subtitle_text">Get started by adding a To-Do</string>
    <string name="editor_activity_title_new_pet">Add a To-Do</string>
    <string name="editor_activity_title_edit_pet">Edit To-Do</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_todo_successful">To-Do saved</string>
    <string name="editor_insert_todo_failed">Error with saving To-Do</string>
    <string name="editor_update_todo_successful">To-Do updated</string>
    <string name="editor_update_todo_failed">Error with updating To-Do</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">discard</string>
    <string name="keep_editing">keep editing</string>
    <string name="editor_delete_todo_successful">To-Do deleted</string>
    <string name="editor_delete_todo_failed">Error with deleting To-Do</string>
    <string name="completed_dialog_msg">Are you sure you\'ve completed the task?</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Overview</string>
    <string name="category_priority">Priority : </string>
    <string name="hint_todo_title">Title</string>
    <string name="todo_title">Title : </string>
    <string name="hint_todo_description">Description</string>
    <string name="todo_description">Description : </string>
    <string name="priority_low">Low</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="no_priority">None</string>
    <string name="completed">Completed : </string>
    <string name="task">Task</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_due_date">Due : </string>
    <string name="created">Created : </string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="delete_completed_msg">Are you sure you\'re done with the Task</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">To-Do Settings</string>
    <string name="restore_msg">Restore to-do to edit its content.</string>
    <string name="restore_key">Restore</string>
    <string name="add_remainder">Add Reminder</string>
    <string name="reminder">Reminder : </string>
    <string name="pick_reminder">Set Reminder</string>
    <string name="remove_reminder_msg">Remove reminder?</string>
    <string name="remove_due_date_msg">Remove due date?</string>
    <string name="remove">Remove</string>
    <string name="title_cannot_be_blank">Title cannot be left blank</string>
    <string name="completed_task_msg">Are you sure you\'re completed with the task?</string>
    <string name="todo_completed">Good Work</string>
    <string name="todo_restore_successful">To-Do successfully restored</string>
    <string name="todo_restore_failed">Error restoring to-do</string>
    <string name="due_date">Due Date : </string>
    <string name="add_due_date">Add Due Date</string>
    <string name="edit_due_date">Edit Due Date</string>

    <string name="fifteen_minutes_early">15 minutes before due time</string>
    <string name="one_hour_early">1 hour before due time</string>
    <string name="two_hour_early">2 hours before due time</string>
    <string name="a_day_before">A day before due date</string>

    <string name="high_priority_radio">High</string>
    <string name="medium_priority_radio">Medium</string>
    <string name="low_priority_radio">Low</string>
    <string name="no_priority_radio">None</string>

    <string name="uploadImages">Set your image</string>
    <string name="action_pic">Pictures</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Sort By</string>
    <string name="settings_order_by_key" translatable="false">sort_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_date_created_label</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_date_created_label">Date</string>
    <string name="settings_order_by_date_created_value" translatable="false">magnitude</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_time_created_label">Time</string>
    <string name="settings_order_by_time_created_value" translatable="false">time</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_priority_label">Priority</string>
    <string name="settings_order_by_priority_value" translatable="false">priority</string>


    <string name="charging_reminder_notification_title">Device Charging - Where\'s that water?</string>
    <string name="charging_reminder_notification_body">There\'s never a better time to drink water than when you know your phone is charging. Drink up!</string>
</resources>

